packages/ui/src/components/about/About.module.css
@import '../../utils/color.css';

.container {
  padding: 4rem;
  max-width: 1200px;
  margin: 0 0;
}

.aboutUs {
  color:var(--primary);
  font-size: 1rem;
  font-weight: 600;
}

.title {
  font-size: 2.5rem;
  font-weight: 700;
  margin: 1rem 0;
  color:var(--text-dark);
}

.description, .subDescription {
  font-size: 1.125rem;
  color: var(--text-gray);
  max-width: 1000px;
}

.description{
  margin-bottom: 1rem;
}

.subDescription {
  margin-bottom: 3rem;
}

.logoGrid {
  display: grid;
  grid-template-columns: repeat(8, 70px);
  gap: 32px;
  margin: 6rem auto 0;
  padding-left: 200px;
  justify-content: center;
  width: fit-content;
}

.logoItem {
  display: flex;
  align-items: center;
  justify-content: center;
}

.logoItem img {
  width: 60px;
  height: 60px;
  object-fit: contain;
}

@media (max-width: 1024px) {
  .logoGrid {
    grid-template-columns: repeat(6, 1fr);
    padding-left: 0;
    gap:24px;
  }
}

@media (max-width: 768px) {
  .logoGrid {
    grid-template-columns: repeat(4, 1fr);
    gap: 20px;
  }
}

@media (max-width: 480px) {
  .logoGrid {
    grid-template-columns: repeat(3, 1fr);
    gap: 16px;
  }
  .container {
    padding: 2rem;
  }
  .logoItem img{
    width: 50px;
    height: 50px;
  }
}

